lesson3/manifest/ingress-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elastic-ingress-canary
  namespace: elastic-system
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"
spec:
  ingressClassName: nginx
  rules:
    - host: elastic.local
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: quickstart-canary-es-http
                port:
                  number: 9200
