lesson3/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elastic-ingress
  namespace: elastic-system
spec:
  ingressClassName: nginx
  rules:
    - host: kibana.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: my-kibana-kb-http
                port:
                  number: 5601
    - host: elastic.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: quickstart-es-http
                port:
                  number: 9200
